Committing server changes

--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,13 @@ PassengerNodejs "/home/twelijqr/nodevenv/samtora-studios/22/bin/node"
 PassengerAppType node
 PassengerStartupFile server.js
 # DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
+# DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION BEGIN
+PassengerAppRoot "/home/twelijqr/samtora-studios"
+PassengerBaseURI "/"
+PassengerNodejs "/home/twelijqr/nodevenv/samtora-studios/22/bin/node"
+PassengerAppType node
+PassengerStartupFile server.js
+# DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
 # DO NOT REMOVE OR MODIFY. CLOUDLINUX ENV VARS CONFIGURATION BEGIN
 <IfModule Litespeed>
 </IfModule>
